--- a/ALGO/算法样例.md
+++ b/ALGO/算法样例.md
@@ -105,7 +105,6 @@ public:
         cache.erase(endWord);
         while (!beQ.empty() && !edQ.empty()) {
             if (beQ.size() > edQ.size()) beQ.swap(edQ);
-            
             unordered_set<string> newBeQ;
             for (auto it = beQ.begin(); it != beQ.end(); ++it) {
                 string s = *it;
@@ -161,7 +160,6 @@ public:
             int mid = left + (right - left) / 2;
             int ans = merge(preSum, left, mid, lower, upper) + merge(preSum, mid, right, lower, upper);
             int leftPoint = mid, rightPoint = mid;
-            // printf("%d->%d, mid : %d\n", left, right, mid);
             for (int k = left; k < mid; k++) {
                 while (leftPoint < right && preSum[leftPoint] - preSum[k] < lower) 
                     leftPoint++;
@@ -176,20 +174,14 @@ public:
             }
             while (leftPos < mid) tmpArray[pos++] = preSum[leftPos++];
             while (rightPos < right) tmpArray[pos++] = preSum[rightPos++];
-            // cout<<"before apart sorted ";
-            // for (auto & i : preSum) cout<<i<<" ";
-            // cout<<endl;
             for (int k = left; k < right; k++) 
                 preSum[k] = tmpArray[k];
-            // cout<<"after apart sorted ";
-            // for (auto & i : preSum) cout<<i<<" ";
-            // cout<<endl;
             return ans;
         }
     };
     ```
-
-    利用边插入，边搜索的思想保持$j > i$，然后利用离散化加上树状数组统计 $[s[j] - upper, s[j] - lower]$ 的个数
+    
+- 利用边插入，边搜索的思想保持$j > i$，然后利用离散化加上树状数组统计 $[s[j] - upper, s[j] - lower]$ 的个数
 
     ```c++
     typedef long long LL;
